feat: adds mantine ui

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -5,7 +5,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>helix-jsdom</title>
+  <link rel="stylesheet" href="./app.css">
+  <title>helix-jsdom-mantine</title>
 </head>
 
 <body>
