--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Portfolio Canvas</title>
-  </head>
-  <body>
-    <main id="canvas" role="main"></main>
-    <script src="./main.js"></script>
-  </body>
+<!doctype html>
+
+<html>
+
+<head>
+  <meta charset="utf-8" />
+</head>
+
+<body>
+  <main id="canvas"></main>
+  <script src="./main.js"></script>
+</body>
+
 </html>
