--- a/resources/index.src.html
+++ b/resources/index.src.html
@@ -5,14 +5,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./app.css">
+  <link rel="stylesheet" href="app.css">
   <title>helix-jsdom-mantine</title>
 </head>
 
 <body>
   <main id="app"></main>
-  <script src="./lib.bundle.js"></script>
-  <script src="./main.js"></script>
+  <script src="/js/lib.bundle.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
